@@ -1806,6 +1806,13 @@ src/plugins/gravatar/packaging/control/223plugin-gravatar -text
 src/plugins/gravatar/packaging/control/223plugin-gravatar.shortdesc -text
 src/plugins/gravatar/packaging/dirs/plugin-gravatar -text
 src/plugins/gravatar/packaging/install/plugin-gravatar -text
+src/plugins/headermenu/action/addLink.php -text
+src/plugins/headermenu/common/headermenu-init.php -text
+src/plugins/headermenu/common/headermenuPlugin.class.php -text
+src/plugins/headermenu/db/headermenu-init.sql -text
+src/plugins/headermenu/etc/headermenu.ini -text
+src/plugins/headermenu/view/admin/viewGlobalConfiguration.php -text
+src/plugins/headermenu/www/index.php -text
 src/plugins/helloworld/NAME -text
 src/plugins/helloworld/README -text
 src/plugins/helloworld/bin/db-delete.pl -text svneol=unset#text/x-perl
