@@ -3,6 +3,7 @@ FusionForge-5.3:
 * Trackers: Attachements moved to filesystem to allow larger attachments & reduce DB size (Alcatel-Lucent)
 * Users: notify admins when user has validated his account (TrivialDev)
 * scmgit: add browsing capability for user personal repository (TrivialDev)
+* headermenu: new plugin to add links in login/logout menu link (TrivialDev)
 
 FusionForge-5.2:
 * Docman: inject zip as a tree (Capgemini)
